fix write page collapse

--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -46,6 +46,12 @@
    text-align: justify;
 }
 
+#wordDrip {
+  margin: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px; 
+}
+
 .drip-style {
   font-size: 16pt;
   font-weight: bold;
